--- a/.github/workflows/performance-tests.yaml
+++ b/.github/workflows/performance-tests.yaml
@@ -21,10 +21,22 @@ jobs:
                   npm install
                   npm run build
 
-            - name: Run Performance Tests
+            - name: Run Performance Tests (Hello World)
               uses: grafana/k6-action@v0.3.0
               with:
                   filename: performance-tests/build/hello-world.js
+                  flags: --include-system-env-vars
+                  cloud: true
+                  token: ${{ secrets.K6_CLOUD_API_TOKEN }}
+              env:
+                  APP_HOST: ${{ vars.APP_HOST }}
+                  APP_AUTH_BASIC_USERNAME: ${{ secrets.APP_AUTH_BASIC_USERNAME }}
+                  APP_AUTH_BASIC_PASSWORD: ${{ secrets.APP_AUTH_BASIC_PASSWORD }}
+
+            - name: Run Performance Tests (Spring)
+              uses: grafana/k6-action@v0.3.0
+              with:
+                  filename: performance-tests/build/spring.js
                   flags: --include-system-env-vars
                   cloud: true
                   token: ${{ secrets.K6_CLOUD_API_TOKEN }}
